--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@
     color:white;
     
 }
+.reverse{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 50px;
+    margin-top: 20px;
+}
 #container3{
     text-align: center;
     justify-content: center;
@@ -58,9 +64,11 @@
     gap: 100px; 
     margin-top: 20px;
     width: 100%;
+    
 }
 
 .button-group button {
     padding: 8px 16px;
     cursor: pointer;
+    border-radius: 10px;
 }
