--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
     justify-content: center;
     margin-top: 20px;
     color:white;
+    font-family: 'Times New Roman', Times, serif;
     
 }
 .reverse{
