--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
     margin-top: 20px;
     color:white;
     font-family: 'Times New Roman', Times, serif;
+    font-weight: 100;
     
 }
 .reverse{
