--- a/style.css
+++ b/style.css
@@ -1,76 +1,88 @@
-.html,body{
-    width: 100%;
-    height:100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    display: flex;
-    justify-content: center;  
-    align-items: center; 
-    background-image:url("background.jpg");
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f4e4ba;
+  background-image: url(background.jpg);
+}
+
+.container {
+  background-color:black;
+  color: white;
+  padding: 2rem;
+  border-radius: 1rem;
+  min-height: 45vh;
+  width: 45vh;
+}
+.container h3 {
+    text-align: center;
     
 }
-.main{
-    margin-top: 30px;
-    background-color: black;
-    width: 400px;
-    height: 500px;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-
-}
-#main_heading{
-    text-align: center;
-    margin-top: 20px;
-    color:white;
-}
-#container2{
-    text-align: center;
-    justify-content: center;
-    margin-top: 20px;
-    color:white;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 100;
-    
-}
-.reverse{
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 50px;
-    margin-top: 20px;
-}
-#container3{
-    text-align: center;
-    justify-content: center;
-    margin-top: 20px;
-    color:white;
-}
-#container4 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px; 
-    color:white;
+form {
+  margin: 2rem 0 1rem 0;
 }
 
-#container4 input {
-    padding: 8px;
-    width: 200px;
-    text-align: center;
+form select,
+button,
+input {
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 0.75rem;
 }
 
-.button-group {
-    display: flex;
-    justify-content: center;
-    gap: 100px; 
-    margin-top: 20px;
-    width: 100%;
-    
+form input {
+  border: 1px solid lightgray;
+  font-size: 1rem;
+  height: 3rem;
+  padding-left: 0.5rem;
 }
 
-.button-group button {
-    padding: 8px 16px;
-    cursor: pointer;
-    border-radius: 10px;
+.dropdown {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.dropdown i {
+  font-size: 1.5rem;
+  margin-top: 1rem;
+}
+
+.select-container img {
+  max-width: 2rem;
+}
+
+.select-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 6rem;
+  border-radius: 0.5rem;
+  border: 1px solid lightgray;
+  background-image: url(background.jpg);
+}
+
+.select-container select {
+  font-size: 1rem;
+  width: auto;
+}
+
+.msg {
+  margin: 2rem 0 2rem 0;
+}
+
+form button {
+  height: 3rem;
+  background-color:green;
+  color: #fff;
+  font-size: 1.15rem;
+  cursor: pointer;
 }
